H3CIPMSJAVA-20180830/src/objects/PickListDataMng__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gbu_L1__c</fullName>
        <label>Gbu L1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gbu_L2__c</fullName>
        <label>Gbu L2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hpl__c</fullName>
        <label>Hpl</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pgu__c</fullName>
        <label>Pgu</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Class_Code__c</fullName>
        <label>Repair Class Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Category__c</fullName>
        <label>Service Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spl_Name__c</fullName>
        <label>Spl Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Gbu__c</fullName>
        <label>Sub Gbu</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>PickListDataMng(del)</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>PickListDataMngId</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Product_Line</fullName>
        <active>true</active>
        <label>Product Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>Repair_Class_Code</fullName>
        <active>true</active>
        <label>Repair Class Code</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>